header button missing else finished

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <header>
         <div class="search">
             <form action="x" method="post" class="form-search">
-                <label for="searchbox"><button type="button" class="magnify-button"><img src="pictures/magnify.svg" class="magnify-glass" alt="magnify-glass"></button></label>
+                <label for="searchbox"><a href="x"><img src="pictures/magnify.svg" class="magnify-glass" alt="magnify-glass"></a></label>
                 <input type="search" name="search" id="searchbox" class="search-focus">
             </form>
         </div>
         <div class="profile-use">
             <a href="x"><img src="pictures/bell-ring-outline.svg" alt="bell-ring-outline" class="bell"></a>
             <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account"></a>
-            <a href="x">Morgan Oakley</a>
+            <a href="x" class="name">Morgan Oakley</a>
         </div>
         <div class="name-profile">
             <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account-lg"></a>
             <div class="hello">
                 <p class="hi">Hi there,</p>
-                <h2>Morgan Oakley (@morgan)</h2>
+                <h2 class="h2">Morgan Oakley (@morgan)</h2>
             </div>
         </div>
         <div class="profile-buttons">
