--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <header>
         <div class="search">
             <form action="x" method="post" class="form-search">
-                <label for="searchbox"><a href="x"><img src="pictures/magnify.svg" class="magnify-glass" alt="magnify-glass"></a></label>
+                <label for="searchbox"><a href="x"><img src="pictures/magnify.svg" class="magnify-glass icon" alt="magnify-glass"></a></label>
                 <input type="search" name="search" id="searchbox" class="search-focus">
             </form>
         </div>
         <div class="profile-use">
-            <a href="x"><img src="pictures/bell-ring-outline.svg" alt="bell-ring-outline" class="bell"></a>
-            <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account"></a>
+            <a href="x"><img src="pictures/bell-ring-outline.svg" alt="bell-ring-outline" class="bell icon"></a>
+            <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account icon"></a>
             <a href="x" class="name">Morgan Oakley</a>
         </div>
         <div class="name-profile">
-            <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account-lg"></a>
+            <a href="x"><img src="pictures/account-circle-outline.svg" alt="" class="account-lg icon"></a>
             <div class="hello">
                 <p class="hi">Hi there,</p>
                 <h2 class="h2">Morgan Oakley (@morgan)</h2>
@@ -35,7 +35,7 @@
     <div class="sidebar">
             <div class="test">
                 <ul class="top-sidebar">
-                    <li><img src="pictures/cloud-outline.svg" alt="" class="cloud"></li>
+                    <li><img src="pictures/cloud-outline.svg" alt="" class="cloud icon"></li>
                     <li class="dashboard"><a href="">Dashboard</a></li>
                 </ul>
             </div>
@@ -54,27 +54,33 @@
             </ul>
     </div>
     <div class="content">
-        <p class="heading-your-projects">Your Projects</p>
-        <div class="your-projects">
-            <div class="super-cool-project">Super Cool Project</div>
-            <div class="less-cool-project">Less Cool Project</div>
-            <div class="impossible-app">Impossible App</div>
-            <div class="easy-peasy-app">Easy Peasy App</div>
-            <div class="ad-blocker">Ad Blocker</div>
-            <div class="money-maker">Money Maker</div>
+        <div class="main-content">
+            <p class="heading-your-projects">Your Projects</p>
+            <div class="your-projects">
+                <div class="super-cool-project">Super Cool Project</div>
+                <div class="less-cool-project">Less Cool Project</div>
+                <div class="impossible-app">Impossible App</div>
+                <div class="easy-peasy-app">Easy Peasy App</div>
+                <div class="ad-blocker">Ad Blocker</div>
+                <div class="money-maker">Money Maker</div>
+            </div>
         </div>
-        <p class="heading-announcements">Announcements</p>
-        <div class="announcement-side">
-            <div class="site-maintenance">Site Maintenance</div>
-            <div class="community-share-day">Community Share Day</div>
-            <div class="updatet-privacy-policy">Updatet Privacy Policy</div>
+        <div class="content-top">
+            <p class="heading-announcements">Announcements</p>
+            <div class="announcement-side">
+                <div class="site-maintenance">Site Maintenance</div>
+                <div class="community-share-day">Community Share Day</div>
+                <div class="updatet-privacy-policy">Updatet Privacy Policy</div>
+            </div>
         </div>
-        <p class="heading-trending">Trending</p>
-        <div class="trending-people">
-            <div class="tegan">@tegan</div>
-            <div class="morgan">@morgan</div>
-            <div class="kendall">@kendall</div>
-            <div class="alex">@alex</div>
+        <div class="content-bottom">
+            <p class="heading-trending">Trending</p>
+            <div class="trending-people">
+                <div class="tegan">@tegan</div>
+                <div class="morgan">@morgan</div>
+                <div class="kendall">@kendall</div>
+                <div class="alex">@alex</div>
+            </div>
         </div>
     </div>
 </body>
