--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="search">
             <form action="x" method="post" class="form-search">
-                <label for="searchbox"><a href="x"><img src="pictures/magnify.svg" class="magnify-glass icon" alt="magnify-glass"></a></label>
+                <a href="x"><img src="pictures/magnify.svg" class="magnify-glass icon" alt="magnify-glass"></a>
                 <input type="search" name="search" id="searchbox" class="search-focus">
             </form>
         </div>
@@ -36,7 +36,15 @@
             <div class="test">
                 <ul class="top-sidebar">
                     <li><img src="pictures/cloud-outline.svg" alt="" class="cloud icon"></li>
-                    <li class="dashboard"><a href="">Dashboard</a></li>
+                    <li class="dashboard"><a href="">D</a></li>
+                    <li class="dashboard"><a href="">A</a></li>
+                    <li class="dashboard"><a href="">S</a></li>
+                    <li class="dashboard"><a href="">H</a></li>
+                    <li class="dashboard"><a href="">B</a></li>
+                    <li class="dashboard"><a href="">O</a></li>
+                    <li class="dashboard"><a href="">A</a></li>
+                    <li class="dashboard"><a href="">R</a></li>
+                    <li class="dashboard"><a href="">D</a></li>
                 </ul>
             </div>
             <ul class="main-sidebar-elements">
